fix: styling and image not showing

--- a/resources/scss/partials/_card_infos.scss
+++ b/resources/scss/partials/_card_infos.scss
@@ -46,4 +46,14 @@
       }
     }
   }
+
+  .pg-lower-content{
+    td{
+      font-weight: 100;
+      font-size: .85rem;
+      &.pg-blue{
+        color: $blue;
+      }
+    }
+  }
 }
